--- a/index.html
+++ b/index.html
@@ -33,9 +33,20 @@
          sportmanship and good results come together. Over time I learned how to deal with losses 
          and I am doing better than I used to. 
         </p>
-        <h1> Website Source: </h1>
+        <h3> Website Source: </h3>
         <a href = "https://blog.amphy.com/11-surprising-benefits-of-playing-chess-for-everyday-life/"> </a>
      </article>
-    </body>
+    </body> 
+</section>
+<h1>My Blog Entries</h1>
+<section id="info">
+    <label for="name">Name:</label>
+    <input id="name" type="text">
+    <label for="text_entry">text_entry:</label>
+    <textarea id="text_entry" type="text"></textarea>
+    <button>add entry!</button>
+    </section>
+    <section id="posts">
+     <h4>My posts!</h4>
 </section>
 </html>
