--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="en"> 
 <head> <title> <strong>Benefits of Chess </strong> </title></head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 <script src="index.js"></script>
 <p class = "chess"> </p>
 <body>
