Added colon to js

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!--
    Name: Petar Spasic
-   Date: 10/13/2023
+   Date: 10/25/2023
    Here is my html file that lists benefits of chess. In paragraph section 
-   I talk briefly about my life story playing chess.
+   I talk briefly about my life story playing chess. I added another section 
+   for user to enter input and to display the input. 
 -->
 <!DOCTYPE html>
 <html lang="en"> 
