--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <input id="name" type="text">
     <label for="text_entry">text_entry:</label>
     <textarea id="text_entry" type="text"></textarea>
-    <button>add entry!</button>
+    <button>Add Entry!</button>
     </section>
     <section id="posts">
      <h4>My posts!</h4>
