Change label to Text Entry

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <section id="info">
     <label for="name">Name:</label>
     <input id="name" type="text">
-    <label for="text_entry">text_entry:</label>
+    <label for="text_entry">Text Entry:</label>
     <textarea id="text_entry" type="text"></textarea>
     <button>Add Entry!</button>
     </section>
